@@ -1,5 +1,6 @@
 Version 1.1.11 (released ??-???-????)
 
+  * security fix: remove user-reachable override of cvsdb row limit
   * fix broken standalone.py -c and -d options handling
   * avoid stack track when asked to checkout a directory (issue #478)
   * improve memory usage and speed of revision log markup (issue #477)
